MMOItemType multiple scripts
Now MMOItemType can have multiple scripts (1 script/trigger type)